--- a/index.css
+++ b/index.css
@@ -118,6 +118,10 @@ pre{
     #nav2 img {
         height: 20px;
     }
+    
+    #nav2 img :hover{
+        transition:none;
+    }
 
     .middle{
     
